Update src/main/java/com/red5pro/io/klv/KLVTagDecoder.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>